# cpputest-starter-project-cmake

./: .gitignore  AllCmake.bat  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
tests/: CMakeLists.txt
